@@ -33,6 +33,6 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('run', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     mainClass = pluginMainClass
-    jvmArgs '-ea'
+    jvmArgs '-ea', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
     args '--developer-mode', '--debug'
 }
